# flowmux-terminal

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  deny.toml  install.sh  rust-toolchain.toml  test.py
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/flowmux-browser/: SKILL.md
.claude/skills/rust-refactor/: SKILL.md
.claude/skills/rust-testing/: SKILL.md
.github/workflows/: license-audit.yml  release.yml  test.yml
crates/flowmux/: Cargo.toml  build.rs
crates/flowmux-app/: Cargo.toml
crates/flowmux-app/src/: agent_watch.rs  ipc_handler.rs  keybindings.rs  main.rs  notifications.rs  theme.rs
crates/flowmux-app/src/bridge/: mod.rs
crates/flowmux-app/src/ui/: browser_pane.rs  mod.rs  options_dialog.rs  popover_pos.rs  sidebar.rs  terminal_pane.rs  window.rs  workspace_view.rs
crates/flowmux-asr/: Cargo.toml
crates/flowmux-asr/src/: catalog.rs  download.rs  lib.rs  session.rs  store.rs
crates/flowmux-asr/src/audio/: capture.rs  mod.rs  probe.rs  resample.rs
crates/flowmux-asr/src/engine/: mod.rs  sense_voice.rs
crates/flowmux-asr/tests/: voice_pipeline.rs
crates/flowmux-browser/: Cargo.toml
crates/flowmux-browser/src/: controller.rs  lib.rs  profile.rs  refs.rs  scripts.rs  snapshot.rs
crates/flowmux-cli/: Cargo.toml
crates/flowmux-cli/src/: agent.rs  cmd_hooks.rs  cmd_ops.rs  desktop_install.rs  doctor.rs  hook_install.rs  hooks.rs  keys.rs  main.rs  main_tests.rs  output.rs  pty_tee.rs  request.rs
crates/flowmux-cli/tests/: pty_tee_integration.rs
crates/flowmux-config/: Cargo.toml
crates/flowmux-config/src/: asr.rs  cmux_json.rs  debug_log.rs  ghostty.rs  keybindings.rs  lib.rs  options.rs  paths.rs  presets.rs  theme.rs
crates/flowmux-config/themes/: catppuccin-latte.theme  catppuccin-mocha.theme  dracula.theme  github-light.theme  gruvbox-dark.theme  nord.theme  one-dark.theme  solarized-dark.theme  solarized-light.theme  tokyo-night.theme
crates/flowmux-cookies/: Cargo.toml
crates/flowmux-cookies/src/: chromium.rs  cookie.rs  firefox.rs  lib.rs  source.rs
crates/flowmux-core/: Cargo.toml
crates/flowmux-core/src/: lib.rs  lib_tests.rs
crates/flowmux-core/tests/: stress_pane_tree_random_walk.rs
crates/flowmux-daemon/: Cargo.toml
crates/flowmux-daemon/src/: handler.rs  lib.rs  main.rs  state_store.rs
crates/flowmux-daemon/tests/: stress_state_store_concurrent.rs  stress_throughput.rs
crates/flowmux-editor/: Cargo.toml
crates/flowmux-editor/src/: lib.rs  protocol.rs  recovery.rs  search.rs  session.rs  web_assets.rs
crates/flowmux-ipc/: Cargo.toml
crates/flowmux-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/flowmux-ipc/tests/: stress_protocol_fuzz.rs  stress_server_concurrent.rs
crates/flowmux-md-viewer/: Cargo.toml
crates/flowmux-md-viewer/src/: main.rs  render.rs
crates/flowmux-notify/: Cargo.toml
crates/flowmux-notify/src/: lib.rs  osc.rs  sender.rs  stream.rs
crates/flowmux-procmon/: Cargo.toml
crates/flowmux-procmon/src/: lib.rs
crates/flowmux-ssh/: Cargo.toml
crates/flowmux-ssh/src/: lib.rs
crates/flowmux-state/: Cargo.toml
crates/flowmux-state/src/: agent_sessions.rs  lib.rs
crates/flowmux-terminal/: Cargo.toml  NOTICE  build.rs
crates/flowmux-terminal/csrc/: ghostty_shim.c  ghostty_shim.h
crates/flowmux-terminal/src/: engine.rs  ghostty_backend.rs  key_modes.rs  lib.rs  pty.rs  render.rs  vt.rs  vte_backend.rs
crates/flowmux-vcs/: Cargo.toml
crates/flowmux-vcs/src/: lib.rs  worktree.rs
crates/flowmux/examples/: ghostty_demo.rs
crates/flowmux/src/: asr.rs  builtin_icons.rs  ipc_handler.rs  ipc_handler_tests.rs  keybindings.rs  main.rs  notifications.rs  theme.rs
crates/flowmux/src/bridge/: mod.rs
crates/flowmux/src/ui/: agent_bar.rs  asr_panel.rs  browser_downloads.rs  browser_pane.rs  browser_pane_macos.rs  browser_pane_stub.rs  browser_pane_webkit.rs  editor_pane.rs  editor_pane_macos.rs  editor_pane_stub.rs  editor_pane_webkit.rs  file_browser.rs  ghostty_pane.rs  image_viewer.rs  keybindings_panel.rs  mod.rs  options_dialog.rs  pane_terminal.rs  show_in_folder.rs  sidebar.rs  terminal_pane.rs  terminal_pane_native.rs  terminal_render.rs  theme_tab.rs  thorvg.rs  update_banner.rs  usage_popover.rs  window.rs  workspace_view.rs  worktree_panel.rs
crates/flowmux/src/ui/window/: agent_bar.rs  command_palette.rs  file_browser.rs  mod.rs  notification_commands.rs  notification_coordinator.rs  pane_callbacks.rs  pane_commands.rs  polling.rs  surface_ops.rs  window_chrome_commands.rs  workspace_commands.rs  worktrees.rs
crates/flowmux/src/update/: check.rs  install.rs  mod.rs  origin.rs
crates/flowmux/src/usage/: claude.rs  codex.rs  mod.rs
docs/: UPSTREAM.md  VERIFICATION.md  configuration.md  flowmux-roadmap.md  ide-editor-plan.md  keybindings.md  pure-rust-terminal-migration.md  stabilization-plan.md
docs/superpowers/plans/: 2026-07-13-browser-download-manager.md
docs/superpowers/specs/: 2026-06-28-tab-drag-move-design.md  2026-07-13-browser-download-manager-design.md
docs/upstream-mapping/: domain-model.md  ipc.md  notifications.md  terminal.md
docs/upstream-mapping/_inbox/: 2026-05-08__7142e31d3a74.md
editor/flowmux-editor-web/: index.html  tsconfig.test.json
editor/flowmux-editor-web/scripts/: verify-dist.mjs
editor/flowmux-editor-web/src/: editor_actions.ts  editor_state.ts  main.ts  protocol.ts  search_state.ts  styles.css
editor/flowmux-editor-web/tests/: editor_actions.test.mjs  editor_shell.test.mjs  editor_state.test.mjs  protocol.test.mjs  (+1 more)
packaging/debian/: cargo-deb.toml
packaging/flatpak/: bootstrap-toolchain.sh  com.cmuxl.App.yml  com.flowmux.App.yml
packaging/vte-patches/: 0001-keep-selection-on-output.patch
resources/desktop/: com.flowmux.App.desktop
resources/themes/: example.theme
scripts/: build-ghostty-vt.sh  build-vte.sh  check-ubuntu-compat.sh  check-wslg-runtime.sh  generate-third-party-licenses.sh  install-host.sh  install-macos.sh  install-thorvg.sh  sync-upstream.sh
