# SPDX-License-Identifier: GPL-3.0-or-later
[workspace]
resolver = "2"
members = ["crates/*"]
# GUI crates require GTK4 system headers; default to headless members so
# `cargo check` works on a fresh Ubuntu before `apt install libgtk-4-dev`.
default-members = [
    "crates/flowmux-core",
    "crates/flowmux-config",
    "crates/flowmux-terminal",
    "crates/flowmux-notify",
    "crates/flowmux-ipc",
    "crates/flowmux-cli",
    "crates/flowmux-state",
    "crates/flowmux-vcs",
    "crates/flowmux-procmon",
    "crates/flowmux-daemon",
    "crates/flowmux-cookies",
    "crates/flowmux-browser",
]

[workspace.package]
version = "0.7.8"
edition = "2021"
rust-version = "1.93"
license = "GPL-3.0-or-later"
repository = "https://github.com/flowmux-ai/flowmux-terminal"
authors = ["The flowmux Authors"]

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async / IO
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "fs", "process", "signal", "time"] }
futures = "0.3"

# Logging / config
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
fs2 = "0.4"

# Notifications / D-Bus
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Low-level PTY / signals (used by `flowmuxctl pty-tee` to forkpty the
# user's shell on an inner PTY and snoop OSC notifications on the way
# back to the terminal).
nix = { version = "0.29", default-features = false, features = ["fs", "term", "process", "signal", "poll", "ioctl"] }
libc = "0.2"

# TOML editing (Codex `~/.codex/config.toml`).
toml_edit = { version = "0.22", features = ["display"] }

# Workspace-internal
flowmux-core = { path = "crates/flowmux-core" }
flowmux-config = { path = "crates/flowmux-config" }
flowmux-terminal = { path = "crates/flowmux-terminal" }
flowmux-notify = { path = "crates/flowmux-notify" }
flowmux-ipc = { path = "crates/flowmux-ipc" }
flowmux-state = { path = "crates/flowmux-state" }
flowmux-vcs = { path = "crates/flowmux-vcs" }
flowmux-procmon = { path = "crates/flowmux-procmon" }
flowmux-daemon = { path = "crates/flowmux-daemon" }
flowmux-cookies = { path = "crates/flowmux-cookies" }
flowmux-browser = { path = "crates/flowmux-browser" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
