# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "GTK4 + libadwaita main application for flowmux."

# Inline cargo-deb metadata so `cargo deb -p flowmux-app` produces a
# correctly-described .deb without an external manifest. Mirror of
# packaging/debian/cargo-deb.toml.
[package.metadata.deb]
name = "flowmux"
maintainer = "The flowmux Authors <noreply@flowmux.invalid>"
section = "utils"
priority = "optional"
depends = "$auto, libgtk-4-1, libadwaita-1-0, libvte-2.91-gtk4-0, libwebkitgtk-6.0-4, libdbus-1-3, libsecret-1-0"
assets = [
    ["target/release/flowmux-app", "usr/bin/", "755"],
    ["../../resources/desktop/com.flowmux.App.desktop", "usr/share/applications/", "644"],
    ["../../LICENSE", "usr/share/doc/flowmux/LICENSE", "644"],
    ["../../NOTICE",  "usr/share/doc/flowmux/NOTICE",  "644"],
    ["../../THIRD_PARTY_LICENSES.md", "usr/share/doc/flowmux/THIRD_PARTY_LICENSES.md", "644"],
]

[[bin]]
name = "flowmux-app"
path = "src/main.rs"

[dependencies]
flowmux-core = { workspace = true }
flowmux-config = { workspace = true }
flowmux-ipc = { workspace = true }
flowmux-notify = { workspace = true }
flowmux-terminal = { workspace = true }
flowmux-state = { workspace = true }
flowmux-vcs = { workspace = true }
flowmux-procmon = { workspace = true }
flowmux-daemon = { workspace = true }
flowmux-cookies = { workspace = true }
flowmux-browser = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-channel = "2"
chrono = { workspace = true }

gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
vte = { package = "vte4", version = "0.8" }
webkit6 = "0.4"
