# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-asr"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Local speech-to-text engine: model catalog, downloader, mic capture, and sherpa-onnx streaming Zipformer inference for the push-to-talk voice input feature."

[dependencies]
flowmux-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
hound = { workspace = true }
sherpa-rs = { workspace = true }
tar = { workspace = true }
bzip2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
