# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "The `flowmux` command-line interface."

[[bin]]
name = "flowmuxctl"
path = "src/main.rs"

[dependencies]
flowmux-core = { workspace = true }
flowmux-config = { workspace = true }
flowmux-ipc = { workspace = true }
flowmux-terminal = { workspace = true }
flowmux-notify = { workspace = true }
flowmux-cookies = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml_edit = { workspace = true }
dirs = "5"
nix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
