# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Domain types for flowmux: workspaces, surfaces, panes, notifications."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
