# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Unix-socket IPC protocol between the flowmux GUI/daemon and the flowmux CLI."

[dependencies]
flowmux-core = { workspace = true }
flowmux-config = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
