# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "flowmux-md-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Markdown viewer for flowmux."

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
comrak = "0.52"
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = "0.4"

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
