# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-procmon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Process descendant + listening-port detection for flowmux workspaces."

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
