# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-state"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Persistence for flowmux: workspace/surface/pane state under $XDG_STATE_HOME."

[dependencies]
flowmux-core = { workspace = true }
flowmux-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
