# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Libghostty-oriented terminal backend contract for flowmux."

[dependencies]
flowmux-core = { workspace = true }
thiserror = { workspace = true }
