# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Libghostty-oriented terminal backend contract for flowmux."

[features]
# Opt-in libghostty-vt terminal core. OFF by default: the VTE-backed GUI is the
# shipping terminal while this backend is developed. Enabling it compiles the C
# shim and links a static libghostty-vt (built by scripts/build-ghostty-vt.sh),
# which requires Zig 0.15.x. See build.rs and src/vt.rs.
libghostty = []

[dependencies]
flowmux-core = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cc = "1"
