# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "GTK4 + libadwaita main application."

# Inline cargo-deb metadata so `cargo deb -p flowmux` produces a
# correctly-described .deb without an external manifest. Mirror of
# packaging/debian/cargo-deb.toml.
[package.metadata.deb]
name = "flowmux"
maintainer = "The flowmux Authors <noreply@flowmux.invalid>"
section = "utils"
priority = "optional"
depends = "$auto, libgtk-4-1, libadwaita-1-0, libvte-2.91-gtk4-0, libwebkitgtk-6.0-4, libdbus-1-3, libsecret-1-0"
assets = [
    ["target/release/flowmux",     "usr/bin/", "755"],
    ["target/release/flowmuxctl",  "usr/lib/flowmux/", "755"],
    ["../../resources/desktop/com.flowmux.App.desktop", "usr/share/applications/", "644"],
    ["../../resources/icons/flowmux.svg",      "usr/share/icons/hicolor/scalable/apps/com.flowmux.App.svg", "644"],
    ["../../resources/icons/flowmux-16.png",   "usr/share/icons/hicolor/16x16/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-24.png",   "usr/share/icons/hicolor/24x24/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-32.png",   "usr/share/icons/hicolor/32x32/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-48.png",   "usr/share/icons/hicolor/48x48/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-64.png",   "usr/share/icons/hicolor/64x64/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-96.png",   "usr/share/icons/hicolor/96x96/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-128.png",  "usr/share/icons/hicolor/128x128/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-256.png",  "usr/share/icons/hicolor/256x256/apps/com.flowmux.App.png", "644"],
    ["../../resources/icons/flowmux-512.png",  "usr/share/icons/hicolor/512x512/apps/com.flowmux.App.png", "644"],
    ["../../LICENSE", "usr/share/doc/flowmux/LICENSE", "644"],
    ["../../NOTICE",  "usr/share/doc/flowmux/NOTICE",  "644"],
    ["../../THIRD_PARTY_LICENSES.md", "usr/share/doc/flowmux/THIRD_PARTY_LICENSES.md", "644"],
]

[[bin]]
name = "flowmux"
path = "src/main.rs"

[features]
# Opt-in: expose `flowmux read-screen` (P0-6) by enabling VTE's text
# extraction API. This raises the compile-time VTE floor to v0_76, so it
# is OFF by default to keep the default build at the v0_70 floor that the
# Ubuntu 22.04 backports-PPA path may depend on. The shipped builds
# (scripts/install-host.sh + Flatpak) link the patched VTE 0.78.4 and
# turn this on. Without it, `read-screen` returns an explicit
# not-supported error instead of failing ambiguously.
vte-text = ["vte/v0_76"]

[dependencies]
flowmux-core = { workspace = true }
flowmux-config = { workspace = true }
flowmux-ipc = { workspace = true }
flowmux-ssh = { workspace = true }
flowmux-notify = { workspace = true }
flowmux-terminal = { workspace = true }
flowmux-state = { workspace = true }
flowmux-vcs = { workspace = true }
flowmux-daemon = { workspace = true }
flowmux-cookies = { workspace = true }
flowmux-browser = { workspace = true }
flowmux-procmon = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-channel = "2"
chrono = { workspace = true }
serde_json = { workspace = true }

gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
# Ubuntu 22.04 does not ship libvte-2.91-gtk4 natively; users on that
# release need a recent backports PPA (or the Flatpak build path, which
# builds VTE from source). vte4 0.8's `v0_70` feature gate is the
# lowest set that exposes `check_hyperlink_at` / `check_match_at` /
# `match_add_regex`, which the URL link handler below relies on.
vte = { package = "vte4", version = "0.8", features = ["v0_70"] }
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSBitmapImageRep", "NSImage", "NSImageRep", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSData", "NSDictionary", "NSError", "NSGeometry", "NSObject", "NSString", "NSURL", "NSURLRequest", "NSUUID"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["std", "WKNavigation", "WKNavigationAction", "WKPreferences", "WKSnapshotConfiguration", "WKUIDelegate", "WKWebView", "WKWebViewConfiguration", "WKWebsiteDataStore", "WKWindowFeatures", "block2", "objc2-app-kit", "objc2-core-foundation"] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
